new splash page

--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -43,3 +43,8 @@ h5
 		color: black;
 		font-size: 12px;
 		padding: 20px 30px;
+	.twitter 
+		position: fixed;
+		bottom: 20px;
+		left: 40%;
+		right: 40%;
