new splash page

--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -8,14 +8,14 @@ html
   body
     header
       h5 
-        a(href="") Ricardo Rauch
+        a(target="_blank", href="http://twitter.com/gravityonmars") Ricardo Rauch
         span  & 
-        a(href="") Cristian Douce
+        a(target="_blank", href="http://twitter.com/cristiandouce") Cristian Douce
         span  presents:
       
     section.site-content
       h1 NodeJS Starter
-      p.description Simple setup using the best practices. Node.js, Express, Mongoose, passport.js, component.io, Jade, Stylus and Bootstrap.
+      p.description Simple setup using the best practices. Node.js, Express, Mongoose, passport.js, component.io, Jade, Stylus and Bootstrap. 
       p.social-login
         a(href="/auth/twitter").btn.btn-primary  login with Twitter
 
