--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -26,7 +26,7 @@ html
     
       .twitter 
         a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='large', data-related='cristiandouce', data-count='none') Tweet
-        script
+        script.
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 
     script(src="//code.jquery.com/jquery.js")
