new splash page

--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -3,7 +3,7 @@ body
 	background-size: cover;
 	color: white
 	text-align: center
-	padding-top: 50px;
+	padding-top: 30px;
 	-webkit-font-smoothing: antialiased; 
 
 a 
@@ -31,7 +31,8 @@ h5
 	.description
 		font-size: 20px;
 		opacity: .6
-
+	h4 
+		margin-top: 40px;
 	.social-login 
 		.btn 
 			margin: 20px;
@@ -43,8 +44,16 @@ h5
 		color: black;
 		font-size: 12px;
 		padding: 20px 30px;
-	.twitter 
+	pre
+		text-align: left;
+		border: 0;
+		border-radius: 0;
+	.share-links 
 		position: fixed;
 		bottom: 20px;
-		left: 40%;
-		right: 40%;
+		text-align: center
+		left: 0;
+		right: 0;
+
+		iframe 
+			margin-left: 20px;
