--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -16,18 +16,32 @@ html
     section.site-content
       h1 NodeJS Starter
       p.description Simple setup using the best practices. Node.js, Express, Mongoose, passport.js, component.io, Jade, Stylus and Bootstrap. 
+
+      h4 Run from your terminal:
+      pre 
+        p 
+          code git clone git@github.com:gravityonmars/nodejs-boilerplate.git
+        p 
+          code cd nodejs-starter
+        p 
+          code make 
+
+      h4 We included passport.js:
       p.social-login
         a(href="/auth/twitter").btn.btn-primary  login with Twitter
 
         a(href="/auth/facebook").btn.btn-primary  login with Facebook
 
-      p  
-        a(href="http://github.com/gravityonmars/nodejs-starter").btn.btn-lg.btn-get-started Clone the project
+      
+        //- a(href="http://github.com/gravityonmars/nodejs-starter").btn.btn-lg.btn-get-started Clone the project
     
-      .twitter 
-        a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='large', data-related='cristiandouce', data-count='none') Tweet
+      .share-links 
+        a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='small', data-related='cristiandouce', data-count='none') Tweet
         script
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
+
+        iframe(src='http://ghbtns.com/github-btn.html?user=gravitonmars&repo=nodejs-starter&type=fork', allowtransparency='true', frameborder='0', scrolling='0', width='62', height='20')
 
     script(src="//code.jquery.com/jquery.js")
     script(src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js")
