--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -9,21 +9,22 @@ body
 a 
 	font-weight: bold
 
-h1 
-	font-size: 70px;
-h5 
-	font-size: 11px;
-	font-style: italic
-	opacity: .6
-	a 
-		color: white;
-		font-weight: normal
-		&:hover 
-			color: white;
-
 .btn 
 	letter-spacing: 2px;
 	text-transform: uppercase
+
+header 
+	h1 
+		font-size: 70px;
+	h5 
+		font-size: 11px;
+		font-style: italic
+		opacity: .6
+		a 
+			color: white;
+			font-weight: normal
+			&:hover 
+				color: white;
 
 .site-content
 	max-width: 600px;
@@ -44,10 +45,17 @@ h5
 		color: black;
 		font-size: 12px;
 		padding: 20px 30px;
-	pre
+	
+	pre.code-box
 		text-align: left;
 		border: 0;
+		padding: 20px;
 		border-radius: 0;
+		margin-top: 20px;
+		h5 
+			margin-top: 0;
+		p 
+			padding-left: 0;
 	.share-links 
 		position: fixed;
 		bottom: 20px;
