--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -25,7 +25,7 @@ html
         p 
           code make 
 
-      h4 We included passport.js:
+      h4 The authentication system is included:
       p.social-login
         a(href="/auth/twitter").btn.btn-primary  login with Twitter
 
