readme & sites using it

--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -32,7 +32,9 @@ html
         a(href="/auth/facebook").btn.btn-primary  login with Facebook
 
       
-        //- a(href="http://github.com/gravityonmars/nodejs-starter").btn.btn-lg.btn-get-started Clone the project
+      h4 Projects using it:
+      p 
+        a(href="http://github.com/democracyos/app", target="_blank") DemocracyOS
     
       .share-links 
 
