--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -12,13 +12,14 @@ html
 
       .share-links 
 
-        a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='large', data-related='cristiandouce', data-count='none') Tweet
+        a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='small', data-related='cristiandouce', data-count='none') Tweet
         script.
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 
 
-        iframe(src='http://ghbtns.com/github-btn.html?user=gravitonmars&repo=nodejs-starter&type=watch&count=true&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='100', height='30')
+        iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=watch&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='50', height='20')
 
+        iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=fork&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='100', height='20')
 
       header
         h1 NodeJS Starter
