--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -12,8 +12,8 @@ a
 
 header 
 	h1 
-		font-size: 60px;
-		margin: 30px 0;
+		font-size: 50px;
+		margin: 30px 0 20px 0;
 	h5 
 		font-size: 11px;
 		font-style: italic
