--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -1,5 +1,5 @@
 body
-	background: url('/boot/images/bg.jpg') top center;
+	background: url('/boot/images/bg.jpg') top center fixed;
 	background-size: cover;
 	-webkit-font-smoothing: antialiased; 
 
@@ -24,7 +24,7 @@ header
 .site-content
 	max-width: 600px;
 	padding: 20px 40px;
-	margin: auto;
+	margin: 30px auto;
 	background: white;
 	.description
 		font-size: 18px;
