--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -13,7 +13,7 @@ a
 header 
 	h1 
 		font-size: 40px;
-		margin: 20px 0 20px 0;
+		margin: 10px 0 20px 0;
 	h5 
 		font-size: 11px;
 		font-style: italic
@@ -23,8 +23,8 @@ header
 
 .site-content
 	max-width: 600px;
-	padding: 20px 40px;
-	margin: 30px auto;
+	padding: 30px 40px;
+	margin:  auto;
 	background: white;
 	.description
 		font-size: 18px;
