[homepage] - Tweet button to iframe instead script

--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -1,9 +1,5 @@
 .share-links 
-
-  a.twitter-share-button(href='https://twitter.com/share', data-url='http://github.com/gravityonmars/nodejs-starter', data-text='NodeJS Starter - Simple setup including express, mongoose, passport.js, component.io and jade.', data-via='gravityonmars', data-size='small', data-related='cristiandouce', data-count='none') Tweet
-  script.
-    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-
+  iframe(src="https://platform.twitter.com/widgets/tweet_button.html?url=http://github.com/gravityonmars/nodejs-starter&via=gravityonmars&size=small&related=cristiandouce&count=none&text=NodeJS%20Starter%20-%20Simple%20setup%20using%20express%2C%20mongoose%2C%20passport.js%2C%20component.io%20and%20jade.", allowtransparency='true', frameborder='0', scrolling='0', width='60', height='20')
 
   iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=watch&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='50', height='20')
 
