--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -20,6 +20,11 @@ pre.code-box
   p 
     code make 
 
+p
+  strong Note 
+  span edit your config/development.json with your Facebook & Twitter keys. 
+  a(href="https://cloudup.com/c41pFaKcMBu", target="blank") Instructions here
+
 h4 The authentication system is included:
 p.social-login
   a(href="/auth/twitter").btn.btn-primary  login with Twitter
