--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -1,5 +1,5 @@
 .share-links 
-  iframe(src="https://platform.twitter.com/widgets/tweet_button.html?url=http://github.com/gravityonmars/nodejs-starter&via=gravityonmars&size=small&related=cristiandouce&count=none&text=NodeJS%20Starter%20-%20Simple%20setup%20using%20express%2C%20mongoose%2C%20passport.js%2C%20component.io%20and%20jade.", allowtransparency='true', frameborder='0', scrolling='0', width='60', height='20')
+  iframe(src="https://platform.twitter.com/widgets/tweet_button.html?url=http://github.com/gravityonmars/nodejs-starter&via=gravityonmars&size=small&related=cristiandouce&count=none&text=Nodejs Starter - Simple project setup using industry's best practices and modules.", allowtransparency='true', frameborder='0', scrolling='0', width='60', height='20')
 
   iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=watch&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='50', height='20')
 
