fix counters github/twitter

--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -1,9 +1,9 @@
 .share-links 
   iframe(src="https://platform.twitter.com/widgets/tweet_button.html?url=http://github.com/gravityonmars/nodejs-starter&via=gravityonmars&size=small&related=cristiandouce&count=none&text=Nodejs Starter - Simple project setup using industry's best practices and modules.", allowtransparency='true', frameborder='0', scrolling='0', width='60', height='20')
 
-  iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=watch&count=false&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='50', height='20')
+  iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=watch&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='90', height='20')
 
-  iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=fork&count=false&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='100', height='20')
+  iframe(src='http://ghbtns.com/github-btn.html?user=gravityonmars&repo=nodejs-starter&type=fork&count=true&size=small', allowtransparency='true', frameborder='0', scrolling='0', width='120', height='20')
 
 header
   h1 NodeJS Starter
