--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -3,6 +3,7 @@ html
   head
     title NodeJS Starter
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
+    link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", rel="stylesheet", media="screen")
     link(rel='stylesheet', href='/app.css')
 
   body
