--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -2,6 +2,10 @@ body
 	background: url('/boot/images/bg.jpg') top center fixed;
 	background-size: cover;
 	-webkit-font-smoothing: antialiased; 
+	font-family: "Lucida Grande";
+
+h1,h2,h3
+	font-weight: 100;
 
 a 
 	font-weight: bold
@@ -12,8 +16,8 @@ a
 
 header 
 	h1 
-		font-size: 40px;
-		margin: 10px 0 20px 0;
+		font-size: 60px;
+		margin: 30px 0 30px 0;
 	h5 
 		font-size: 11px;
 		font-style: italic
@@ -22,8 +26,8 @@ header
 			font-weight: normal
 
 .site-content
-	max-width: 600px;
-	padding: 30px 40px;
+	max-width: 650px;
+	padding:  50px;
 	margin:  auto;
 	background: white;
 	.description
