--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -13,12 +13,9 @@ header
 h4 Run from your terminal:
 
 pre.code-box
-  p 
-    code git clone git@github.com:gravityonmars/nodejs-starter.git
-  p 
-    code cd nodejs-starter
-  p 
-    code make 
+  | git clone git@github.com:gravityonmars/nodejs-starter.git
+  | cd nodejs-starter
+  | make 
 
 p
   strong Note 
