--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -17,7 +17,7 @@ a
 header 
 	h1 
 		font-size: 60px;
-		margin: 30px 0 30px 0;
+		margin: 50px 0 30px 0;
 	h5 
 		font-size: 11px;
 		font-style: italic
@@ -27,8 +27,8 @@ header
 
 .site-content
 	max-width: 650px;
-	padding:  50px;
-	margin:  auto;
+	padding: 30px 50px;
+	margin: 30px auto;
 	background: white;
 	.description
 		font-size: 18px;
