Using Builder2.js

--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -1,5 +1,5 @@
 body
-	background: url('/boot/images/bg.jpg') top center fixed;
+	background: url('/lib/boot/images/bg.jpg') top center fixed;
 	background-size: cover;
 	-webkit-font-smoothing: antialiased; 
 	font-family: "Lucida Grande";
