updating homepage adding @slifszyc to the list of contributors

--- a/lib/homepage/splash.jade
+++ b/lib/homepage/splash.jade
@@ -32,6 +32,8 @@ p.social-login
 h4 Projects using it:
 ul  
   li
+    a(href="https://auth0.com", target="_blank") Auth0 Website
+  li
     a(href="http://github.com/democracyos/app", target="_blank") DemocracyOS
 
 h4 Contributors
@@ -40,3 +42,5 @@ ul
     a(href="http://twitter.com/cristiandouce") Cristian Douce 
   li
     a(href="http://twitter.com/gravityonmars") Ricardo Rauch
+  li
+    a(href="http://twitter.com/slifszyc") Sacha Lifszyc
