Update npm dependencies

--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -1,64 +1,64 @@
 body
-	background: url('/boot/images/bg.jpg') top center fixed;
-	background-size: cover;
-	-webkit-font-smoothing: antialiased; 
-	font-family: "Lucida Grande";
+	background url('images/bg.jpg') top center fixed
+	background-size cover
+	-webkit-font-smoothing antialiased
+	font-family "Lucida Grande"
 
 h1,h2,h3
-	font-weight: 100;
+	font-weight 100
 
-a 
-	font-weight: bold
+a
+	font-weight bold
 
-.btn 
-	letter-spacing: 2px;
-	text-transform: uppercase
+.btn
+	letter-spacing 2px
+	text-transform uppercase
 
-header 
-	h1 
-		font-size: 60px;
-		margin: 50px 0 30px 0;
-	h5 
-		font-size: 11px;
-		font-style: italic
-		opacity: .6
-		a 
-			font-weight: normal
+header
+	h1
+		font-size 60px
+		margin 50px 0 30px 0
+	h5
+		font-size 11px
+		font-style italic
+		opacity .6
+		a
+			font-weight normal
 
 .site-content
-	max-width: 650px;
-	padding: 30px 50px;
-	margin: 30px auto;
-	background: white;
+	max-width 650px
+	padding 30px 50px
+	margin 30px auto
+	background white
 	.description
-		font-size: 18px;
-		line-height: 26px;
-		margin-bottom: 30px;
-	h4 
-		margin-top: 30px;
-	.social-login 
-		.btn 
-			margin-right: 20px;
-			font-size: 11px;
+		font-size 18px
+		line-height 26px
+		margin-bottom 30px
+	h4
+		margin-top 30px
+	.social-login
+		.btn
+			margin-right 20px
+			font-size 11px
 
 	a.btn.btn-get-started
-		border: 0;
-		background: white;
-		color: black;
-		font-size: 12px;
-		padding: 20px 30px;
-	
+		border 0
+		background white
+		color black
+		font-size 12px
+		padding 20px 30px
+
 	pre.code-box
-		text-align: left;
-		border: 0;
-		padding: 20px;
-		border-radius: 0;
-		margin-top: 20px;
-		h5 
-			margin-top: 0;
-		p 
-			padding-left: 0;
-	
-	.share-links 
-		iframe 
-			margin-right: 20px;
+		text-align left
+		border 0
+		padding 20px
+		border-radius 0
+		margin-top 20px
+		h5
+			margin-top 0
+		p
+			padding-left 0
+
+	.share-links
+		iframe
+			margin-right 20px
