--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
   head
     title NodeJS Starter
@@ -11,4 +11,4 @@ html
 
     script(src='/app.js')
     script.
-      require('boot')
+      require('./lib/boot')
