[header] - Add header with headroom

--- a/lib/boot/index.jade
+++ b/lib/boot/index.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/app.css')
 
   body
+    header.app-header
     section.site-content
 
     script(src='/app.js')
