--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -1,8 +1,12 @@
+/* Vars
+-------------------------------------------------- */
+header_height = 60px
+
 body
-	background url('images/bg.jpg') top center fixed
-	background-size cover
+	background #ede2f2
 	-webkit-font-smoothing antialiased
 	font-family "Lucida Grande"
+	padding-top header_height
 
 h1,h2,h3
 	font-weight 100
