[translations] - Add translations component #8

--- a/lib/header/template.jade
+++ b/lib/header/template.jade
@@ -8,7 +8,7 @@ header.app-header(headroom)
     .user-nav.btn-group
       a.login.pull-right(href='/signin')
         i.icon-signin
-        span= t('header.signin')
+        span= t('header.login')
       a.login.pull-right(href='/signup')
         i.icon-user
         span= t('header.signup')
