--- a/lib/signup/template.jade
+++ b/lib/signup/template.jade
@@ -1,5 +1,5 @@
 .signup-container.inner-container.small-container
-  #signup-form
+  #signup-form(hidden='{{ success }}', on-submit='{{ this.onsubmit }}')
     .title-page
       .circle
         i.icon-user
@@ -8,7 +8,7 @@
       ul.form-errors
       .form-group
         label= t('common.email')
-        input.form-control(type='email', name='email', tabindex=1, placeholder=t('signup.email.placeholder'), validate='required email')
+        input.form-control(type='email', name='email', tabindex=1, placeholder=t('signup.email.placeholder'), validate='required email', value='{{ email }}')
       .form-group
         label=t('signup.firstname.label')
         input.form-control(type='text', id='firstName', name='firstName', tabindex=2, placeholder=t('signup.firstname.placeholder'), validate='required firstname')
@@ -21,8 +21,8 @@
       .form-group
         label= t('signup.repeat-password.label')
         input.form-control(type='password', name='re_password', tabindex=5, placeholder=t('signup.repeat-password.placeholder'), validate='required same:password')
-      .form-group: button.btn.btn-success.btn-block.btn-lg(tabindex=6)=t('signup.submit')
-  #signup-message.hide
+      .form-group: button(tabindex=6).btn.btn-success.btn-block.btn-lg=t('signup.submit')
+  #signup-message(hidden='{{ !success }}')
     h1=t('signup.success.title')
     p.lead.text-muted=t('signup.success.text.1')
     p.lead.text-muted= t('signup.success.text.2')
