[signup] - Add autovalidate form #7

--- a/lib/signup/template.jade
+++ b/lib/signup/template.jade
@@ -1,5 +1,5 @@
 .signup-container.inner-container.small-container
-  #signup-form(hidden='{{ success }}', on-submit='{{ this.onsubmit }}')
+  #signup-form(hidden='{{ success }}', autovalidate)
     .title-page
       .circle
         i.icon-user
