--- a/lib/boot/index.styl
+++ b/lib/boot/index.styl
@@ -66,3 +66,16 @@ header
 	.share-links
 		iframe
 			margin-right 20px
+
+	form
+		.form-group
+			position relative
+
+			input.error
+				border-color #c0392b
+
+			span.error
+				color #c0392b
+				position absolute
+				top 32px
+				right 14px
