--- a/lib/signup/template.jade
+++ b/lib/signup/template.jade
@@ -6,6 +6,7 @@
       h1= t('signup.title')
     form.form(action='/signup', method="post", role="form", autosubmit, autovalidate)
       ul.form-errors
+        | {{ errors }}
       .form-group
         label= t('common.email')
         input.form-control(type='email', name='email', tabindex=1, placeholder=t('signup.email.placeholder'), validate='required email', value='{{ email }}')
