--- a/lib/signin/template.jade
+++ b/lib/signin/template.jade
@@ -3,19 +3,20 @@
     .title-page
       .circle
         i.icon-signin
-      h1 Login to DemocracyOS
-
+      h1=t('signin.login.to') + " " + t('common.name')
     form.form(action="/signin", method="post", role="form", autovalidate='autovalidate', autosubmit='autosubmit')
       ul.form-errors
-      .form-group
-        label='Email'
-        input.form-control(type='text', name='email', tabindex=1, placeholder='forgot.mail.example', validate='required email')
-      .form-group
-        label='password'
-        .forgot: a(href='/forgot', tabindex=4) forgot.question
 
-        input.form-control(type='password', name='password', tabindex=2, placeholder='password', validate='required')
-      .form-group: .signup
-        span='Don\'t have an account?'
-        a(href='/signup', tabindex=5) 'Signup now'
-      .form-group: button.btn.btn-block.btn-primary.btn-lg(tabindex=3)='Login'
+    .form-group
+      label= t('common.email')
+      input.form-control(type='text', name='email', tabindex=1, placeholder=t('signin.forgot.mail.example'), validate='required email')
+
+    .form-group
+      label=t('common.password')
+      .forgot: a(href='/forgot', tabindex=4)=t('signin.forgot.question')
+
+      input.form-control(type='password', name='password', tabindex=2, placeholder=t('signin.password'), validate='required')
+    .form-group: .signup
+      span=t('signin.have.account')
+      a(href='/signup', tabindex=5)=t('signin.now')
+    .form-group: button.btn.btn-block.btn-primary.btn-lg(tabindex=3)=t('common.login')
