--- a/lib/layout/index.jade
+++ b/lib/layout/index.jade
@@ -5,6 +5,8 @@ html
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
     link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", rel="stylesheet", media="screen")
     link(rel='stylesheet', href='/app.css')
+    script.
+      var csrfToken = '#{csrfToken}';
 
   body
     header.app-header
