Add bootstrap libraries. #10

--- a/lib/layout/index.jade
+++ b/lib/layout/index.jade
@@ -4,6 +4,11 @@ html
     title NodeJS Starter
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
     link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", rel="stylesheet", media="screen")
+
+    // Boostrap Complete
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+    link(href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css', rel='stylesheet')
+
     link(rel='stylesheet', href='/app.css')
     script.
       var csrfToken = '#{csrfToken}';
@@ -11,6 +16,10 @@ html
   body
     header.app-header
     section.site-content
+
+    //- Core 3rd parties libs
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
+    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
 
     script(src='/app.js')
     script.
