comment settings link to be fix on #15

--- a/lib/user-badge/template.jade
+++ b/lib/user-badge/template.jade
@@ -4,7 +4,8 @@
     span.name.ellipsis=user.firstName
     span.caret
   ul.dropdown-menu
-    li: a(href='/settings')= t('header.settings')
+    //TODO: uncoment for #15
+    //li: a(href='/settings')= t('header.settings')
     - if (config['faq'])
       li: a(href="/help/faq")= t('help.faq.title')
     - if (config['tos'])
