[dashboard] Basic page with hardcoded redirection to an instance #25

--- a/lib/dashboard/template.jade
+++ b/lib/dashboard/template.jade
@@ -1,2 +1,5 @@
-div
-  | This is the dashboard
+.col-md-12
+  .row
+    h2 Your instances
+    .instances
+    .btn.btn-lg.btn-primary Add new instance
