[layout] Changed page title

--- a/lib/layout/index.jade
+++ b/lib/layout/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title NodeJS Starter
+    title DemocracyOS Platform
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
     link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", rel="stylesheet", media="screen")
 
