--- a/lib/dashboard/template.jade
+++ b/lib/dashboard/template.jade
@@ -1,5 +1,6 @@
-.col-md-12
-  .row
-    h2 Your instances
-    .instances.list-group
-    .btn.btn-lg.btn-primary Add new instance
+#instances
+  .col-md-12
+    .row
+      h2 Your instances
+      .instances.list-group
+      .btn.btn-lg.btn-primary Add new instance
