--- a/lib/instance-view/template.jade
+++ b/lib/instance-view/template.jade
@@ -1,3 +1,4 @@
-a.list-group-item(href='#{url}')
-  h4.list-group-item-heading #{name}
-  p.list-group-item-text Body
+.instance-item
+  a.list-group-item(href='#{url}' data-id='#{id}')
+    h4.list-group-item-heading #{title}
+    p.list-group-item-text #{summary}
