--- a/lib/dashboard/template.jade
+++ b/lib/dashboard/template.jade
@@ -3,4 +3,4 @@
     .row
       h2 Your instances
       .instances.list-group
-      .btn.btn-lg.btn-primary Add new instance
+      .btn.btn-lg.btn-primary.new Add new instance
